--- a/Web/TP/.project
+++ b/Web/TP/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>libs</name>
+			<type>2</type>
+			<location>C:/Users/Loris/Documents/L3_Info/Web/TP/src/libs</location>
+		</link>
+	</linkedResources>
 </projectDescription>
